# GLADIUS

./: .build_class.memory.json  .env.example  .gitignore  AI_AUTHORIZED.json  ARCHITECTURE.md  BTC Sentiment Swing.md  COMMANDS.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING_AI.md  CRITICAL_ISSUES_REMEDIATION_REPORT.md  FLIGHT_CHECKLIST.md  Fear Management.md  GAPS_AND_IMPROVEMENTS.md  Journal template.md  LICENSE.md  MANDATE.md  MODEL.md  NAVIGATION.md  New.md  ORGANIZATION_SUMMARY.md  QUICKSTART.md  README.md  README_NEW.md  SNAPSHOT.md  config.json  fvg-mss.mq5  gladius.sh  index.html  overview.md  preflight_checklist.json  preflight_checklist.md  preflight_checlist.html  readme.md  test_note.md
Argmax/: Architecture.md  (+2 more)
Artifact/arty/ingest_bot/: README.md  __init__.py  dashboard.py  orchestrator.py  prov_data.py  pyproject.toml  reports.py
Artifact/arty/ingest_bot/adapters/: __init__.py  yfinance_adapter.py
Artifact/arty/ingest_bot/data/btc/: manifest.json  records.json
Artifact/arty/ingest_bot/data/reports/btc/: last_rows.csv  predictions.json  report.json  summary.json  surface.json
Artifact/arty/ingest_bot/deploy/: backtest.timer  deep-reflect.timer  deep-reflect@.service  run_ingest.sh
Artifact/arty/ingest_bot/pipeline/: arty_integration.py  writer.py
Artifact/arty/ingest_bot/templates/: dashboard.html
Artifact/arty/ingest_bot/tests/: test_backtest_hardened.py  test_jobs_persistence.py  test_reports_and_dashboard.py  test_yfinance_realistic.py
Artifact/arty/ingest_bot/tests/integration/: test_fred_integration.py  test_yfinance_integration.py
(+2686 files in other folders)
