[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest_bot"
version = "0.0.0"
description = "Minimal standalone ingest bot"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.scripts]
ingest-bot = "ingest_bot.orchestrator:main"
